# vcode

./: .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  test.yml
about/: index.html
acp/: index.html
approvals/: index.html
configuration/: index.html
current-capabilities/: index.html
docs/: acp.md  approvals.md  configuration.md  current-capabilities.md  getting-started.md  index.md  limitations.md  llms.txt  sessions-and-modes.md  workspace-tools.md
docs/about/: index.md
getting-started/: index.html
limitations/: index.html
scripts/: demo_mcp_server.py  mock_hook_audit.py  mock_hook_snapshot.py
search/: search_index.json
sessions-and-modes/: index.html
src/vcode/: __init__.py  __main__.py  approvals.py  cli.py  modes.py  preferences.py  sessions.py  workspace.py
src/vcode/acp/: __init__.py  agent.py  permissions.py  presentation.py  server.py  updates.py
src/vcode/caps/: __init__.py  composer.py  filesystem.py  hooks.py  mcp.py
src/vcode/config/: __init__.py  loading.py  models.py  paths.py
src/vcode/hooks/: __init__.py  adapter.py  errors.py  events.py
src/vcode/runtime/: __init__.py  commands.py  projections.py  types.py
src/vcode/toolsets/: __init__.py  filesystem.py
tests/: conftest.py  fakes.py  test_acp_agent.py  test_caps.py  test_config.py  test_runtime.py  test_sessions.py
workspace-tools/: index.html
